[package]
name = "timeyAPI"
version = "0.1.0"
authors = ["Markus <markus@netalia.se>"]
edition = "2018"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
rocket = "0.4.2"
#rocket_contrib = "0.4.0"
serde = "1.0.35"
serde_json = "1.0.35"
serde_derive = "1.0.35"
diesel_codegen = "0.16.0"
diesel = { version = "1.3.3", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.9.0"
rust-argon2 = "0.4.0"
[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_sqlite_pool","json"]
#features = ["json"]
